refactor: consolidate common codegen logic into AbstractBetterCodegen
Extract duplicated patterns from all 6 language-specific codegens into
the base class using template methods and hooks:

- processOpts: centralize supportingFiles.clear(), setEnablePostProcessFile,
  and hideGenerationTimestamp
- toOperationId (final): null/empty validation with abstract formatOperationId
- toVarName: sanitize + casing + reserved-word check with abstract
  applyVarNameCasing
- getTypeDeclaration: container type handling with overridable
  formatArrayType, formatMapType, getMapKeyType, getMapDefaultValueType
- toEnumValue: numeric vs quoted dispatch with overridable
  isNumericEnumDatatype, quoteEnumValue
- getPropertyOrDefault helper replacing ~15 repetitive if/put blocks

Subclasses now only implement language-specific hooks, reducing ~300
lines of duplicated boilerplate while preserving identical output.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>